powerprofilesctl not switching profiles when amd_pstate=passive
After updating my system switching profiles when amd_pstate=passive no longer works. If try to switch profiles I get the following error:
❯ powerprofilesctl set balanced
Failed to communicate with power-profiles-daemon: g-io-error-quark: GDBus.Error:org.gtk.GDBus.UnmappedGError.Quark._g_2dio_2derror_2dquark.Code13: Failed to activate CPU driver 'amd_pstate': Error writing '/sys/devices/system/cpu/cpufreq/policy11/scaling_governor': Invalid argument (13)
Additional info:
- kernel: 6.6.53 (custom)
- distro: NixOS
Edited by Carlos