Allow amd-pstate to change modes at runtime

Rather than checking for active mode at startup and then never checking
it again check the mode when trying to write a value.

If it's not active, log something to the journal. This is intentionally
not failing because users could still have an ACPI platform-profile change
occur.

Fixes: https://gitlab.freedesktop.org/upower/power-profiles-daemon/-/issues/168